package jp.kujira.ais.user;

/**
 * Created by Kujira on 2017/06/01.
 */
public abstract class DiligentUser extends AbstractUser implements User {
}
