package jp.kujira.ais.user;

/**
 * Created by Kujira on 2017/04/26.
 */
public interface User {
    void requireKnowHow();
}
